Fixing MultipleBagFetchException